add ENABLE_SHARE_LINK_REPORT_ILLEGAL setting

--- a/seahub/templates/js/sysadmin-templates.html
+++ b/seahub/templates/js/sysadmin-templates.html
@@ -118,16 +118,16 @@
         </li>
         {% endif %}
 
+
         {% if is_default_admin and enable_work_weixin %}
         <li class="tab">
             <a href="{{ SITE_ROOT }}sys/work-weixin/departments/"><span class="sf3-font-enterprise-wechat sf3-font"></span>企业微信集成</a>
         </li>
         {% endif %}
 
-        {% if is_default_admin %}
+        {% if is_default_admin and enable_share_link_report_illegal %}
         <li class="tab<% if (cur_tab == 'illegal-reports') { %> tab-cur<% } %>">
             <a href="{{ SITE_ROOT }}sysadmin/#illegal-reports/"><span class="sf2-icon-monitor"></span>{% trans "Illegal Reports" %}</a>
-
         </li>
         {% endif %}
 
