--- a/seahub/templates/sysadmin/base.html
+++ b/seahub/templates/sysadmin/base.html
@@ -135,7 +135,7 @@
             </li>
             {% endif %}
 
-            {% if is_default_admin %}
+            {% if is_default_admin and enable_share_link_report_illegal %}
             <li class="tab">
                 <a href="{{ SITE_ROOT }}sysadmin/#illegal-reports/"><span class="sf2-icon-admin-log"></span>{% trans "Illegal Reports" %}</a>
             </li>
