--- a/seahub/templates/shared_file_view_react.html
+++ b/seahub/templates/shared_file_view_react.html
@@ -69,6 +69,7 @@ body {
       fileType: '{{ filetype }}',
       fileExt: '{{ fileext }}',
       commitID: '{{ current_commit.id }}' || '{{ repo.head_cmmt_id }}',
+      enableShareLinkReportIllegal: '{{ enable_share_link_report_illegal }}' == 'True',
 
       // for 'view file in shared dir'
       {% if zipped %}
