--- a/seahub/templates/sysadmin/base.html
+++ b/seahub/templates/sysadmin/base.html
@@ -135,9 +135,9 @@
             </li>
             {% endif %}
 
-            {% if is_default_admin and enable_share_link_report_illegal %}
+            {% if is_default_admin and enable_share_link_report_abuse %}
             <li class="tab">
-                <a href="{{ SITE_ROOT }}sysadmin/#illegal-reports/"><span class="sf2-icon-admin-log"></span>{% trans "Illegal Reports" %}</a>
+                <a href="{{ SITE_ROOT }}sysadmin/#abuse-reports/"><span class="sf2-icon-admin-log"></span>{% trans "Abuse Reports" %}</a>
             </li>
             {% endif %}
 
