--- a/seahub/templates/js/sysadmin-templates.html
+++ b/seahub/templates/js/sysadmin-templates.html
@@ -127,7 +127,7 @@
 
         {% if is_default_admin and enable_share_link_report_abuse %}
         <li class="tab<% if (cur_tab == 'abuse-reports') { %> tab-cur<% } %>">
-            <a href="{{ SITE_ROOT }}sysadmin/#abuse-reports/"><span class="sf2-icon-monitor"></span>{% trans "Abuse Reports" %}</a>
+            <a href="{{ SITE_ROOT }}sys/abuse-reports/"><span class="sf2-icon-monitor"></span>{% trans "Abuse Reports" %}</a>
         </li>
         {% endif %}
 
