--- a/seahub/templates/sysadmin/base.html
+++ b/seahub/templates/sysadmin/base.html
@@ -137,7 +137,7 @@
 
             {% if is_default_admin and enable_share_link_report_abuse %}
             <li class="tab">
-                <a href="{{ SITE_ROOT }}sysadmin/#abuse-reports/"><span class="sf2-icon-admin-log"></span>{% trans "Abuse Reports" %}</a>
+                <a href="{{ SITE_ROOT }}sys/abuse-reports/"><span class="sf2-icon-admin-log"></span>{% trans "Abuse Reports" %}</a>
             </li>
             {% endif %}
 
