--- a/seahub/templates/react_dtable.html
+++ b/seahub/templates/react_dtable.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE }}">
 <head>
-<title>{{ filename }}</title>
+<title>DTable</title>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="{% trans "File Collaboration Team Organization" %}" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
