return dtable columns

--- a/seahub/templates/shared_dtable_row_view_react.html
+++ b/seahub/templates/shared_dtable_row_view_react.html
@@ -24,7 +24,8 @@
     <script type="text/javascript">
         window.shared = {
             pageOptions: {
-                fileContent: '{{ file_content|escapejs }}',
+                rowContent: '{{ row_content|escapejs }}',
+                columns: '{{ columns|escapejs }}',
             }
         };
     </script>
