--- a/seahub/templates/react_dtable.html
+++ b/seahub/templates/react_dtable.html
@@ -28,6 +28,7 @@
     window.app = {
         config: {
             siteRoot: '{{ SITE_ROOT }}',
+            avatarURL: '{{ avatar_url }}'
         },
         pageOptions: {
             server: '{{ service_url }}',
