--- a/seahub/templates/react_dtable.html
+++ b/seahub/templates/react_dtable.html
@@ -43,7 +43,10 @@
             mediaUrl: '{{ media_url }}',
             dtableServer: '{{ dtable_server }}',
             dtableSocket: '{{ dtable_socket }}',
-            lang: '{{ LANGUAGE_CODE }}'
+            lang: '{{ LANGUAGE_CODE }}',
+            shareLinkExpireDaysMin: '{{ share_link_expire_days_min }}',
+            shareLinkExpireDaysMax: '{{ share_link_expire_days_max }}',
+            shareLinkExpireDaysDefault: '{{ share_link_expire_days_default }}',
         }
      };
 </script>
