--- a/frontend/src/css/dtable.css
+++ b/frontend/src/css/dtable.css
@@ -7,13 +7,6 @@
   height: 50px;
 }
 
-.dtable-header .dtable-logo {
-  padding-right: 6px;
-  font-size: 36px;
-  line-height: 36px;
-  color: #FEAC74;
-}
-
 .dtable-header .dtable-text {
   display: flex;
   align-items: center;
@@ -23,6 +16,10 @@
 
 .dtable-side-nav {
   padding: 12px;
+  flex: auto;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
 }
 
 .dtable-nav-title {
@@ -69,14 +66,17 @@
 }
 
 .dtable-header .common-toolbar>div {
-  padding-right: 1rem;
   cursor: pointer;
+  margin-left: 0.5rem;
 }
 
-.dtable-center .cur-view-title {
+.dtable-center .cur-view-header {
   line-height: 50px;
   font-size: 1.5rem;
-  padding-left: 12px;
+  padding: 0 16px;
+}
+
+.dtable-center .cur-view-header .cur-view-title {
   border-bottom: 1px solid #eee;
 }
 
@@ -154,6 +154,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  min-height: 0;
 }
 .workspace .table-item-container .table-item {
   width: 48%;
@@ -178,6 +179,7 @@
   width: 15%;
   height: 100%;
   text-align: right;
+  position: relative;
 }
 .workspace .table-item .table-dropdown-menu .table-dropdown-menu-icon {
   width: 24px;
