[system admin] settings: refactored it
* fixup & improvement

--- a/media/css/seahub_react.css
+++ b/media/css/seahub_react.css
@@ -65,6 +65,7 @@
 .sf2-icon-organization:before { content:"\e010"; }
 .sf2-icon-share:before { content:"\e011"; }
 .sf2-icon-star:before { content:"\e012"; }
+.sf2-icon-wiki:before { content:"\e013"; }
 .sf2-icon-wiki-view:before { content:"\e013"; }
 .sf2-icon-history:before { content:"\e014"; }
 .sf2-icon-cog1:before { content:"\e015"; }
