--- a/seahub/templates/shared_dtable_row_view_react.html
+++ b/seahub/templates/shared_dtable_row_view_react.html
@@ -11,10 +11,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <meta http-equiv="x-ua-compatible" content="ie=edge" />
 <link rel="shortcut icon" href="{{ MEDIA_URL }}{{ favicon_path }}" />
-<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}fontawesome/css/fontawesome-all.min.css" />
-<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/seafile-ui.css" />
-<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/sf_font3/iconfont.css" />
+{% block extra_style %}
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/dtable-font.css" />
+{% endblock %}
 </head>
 
 <body>
