--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -49,6 +49,7 @@
         },
         pageOptions: {
             csrfToken: "{{ csrf_token }}",
+            dtableWebServer: "{{dtable_web_server}}",
             seafileCollabServer: '{{seafile_collab_server}}',
             name: "{{request.user.username|email2nickname|escapejs}}",
             contactEmail: "{{request.user.username|email2contact_email|escapejs}}",
