[shared dir view] fixup for 'current path'

--- a/seahub/templates/view_shared_dir_react.html
+++ b/seahub/templates/view_shared_dir_react.html
@@ -22,6 +22,16 @@
             dirName: '{{ dir_name|escapejs }}',
             sharedBy: '{{ username|email2nickname|escapejs }}',
             path: '{{ path|escapejs }}',
+            zipped: (function() {
+              var list = [];
+              {% for name, path in zipped %}
+              list.push({
+                'name': '{{ name|escapejs }}',
+                'path': '{{ path|escapejs }}'
+              });
+              {% endfor %}
+              return list;
+            })(),
             token: '{{ token }}',
             mode: '{{ mode }}',
             thumbnailSize: {{ thumbnail_size }},
