repair wiki scroll bug

--- a/frontend/src/css/wiki.css
+++ b/frontend/src/css/wiki.css
@@ -68,6 +68,7 @@ img[src=""] {
 .cur-view-content {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .cur-view-content .wiki-page-container {
