--- a/seahub/templates/sysadmin/sysadmin_react_app.html
+++ b/seahub/templates/sysadmin/sysadmin_react_app.html
@@ -28,6 +28,13 @@
         return list;
       })(),
       available_admin_roles: '{{ available_admin_roles | escapejs }}',
+      institutions: (function() {
+        var list = [];
+        {% for institution in institutions %}
+        list.push('{{institution|escapejs}}');
+        {% endfor %}
+        return list;
+      })(),
 			admin_permissions: {
         "can_view_system_info": {% if user.admin_permissions.can_view_system_info %} true {% else %} false {% endif %},
         "can_view_statistic": {% if user.admin_permissions.can_view_statistic %} true {% else %} false {% endif %},
