virus scan react

--- a/seahub/templates/sysadmin/base.html
+++ b/seahub/templates/sysadmin/base.html
@@ -107,7 +107,7 @@
 
             {% if is_pro and is_default_admin %}
             <li class="tab {% block cur_virus_scan %}{% endblock %}">
-                <a href="{{ SITE_ROOT }}sys/virus_scan_records/"><span class="sf2-icon-security"></span>{% trans "Virus Scan" %}</a>
+                <a href="{{ SITE_ROOT }}sys/virus-scan-records/"><span class="sf2-icon-security"></span>{% trans "Virus Scan" %}</a>
             </li>
             {% endif %}
 
