Illegal report by react (#3415)
* illegal report

1, add illegal report at shared file page
2, list all illegal reports at admin page

* add ENABLE_SHARE_LINK_REPORT_ILLEGAL setting

* UserRateThrottle -> AnonRateThrottle

* use to_python_boolean

* frontend by React

* remove illegal report dialog in shared dir view

* add migrations dir

* add illegal_reports migrations

* rename illegal to abuse in api

* rename illegal to abuse in test

* rename illegal to abuse in share file view

* rename illegal to abuse in react

* rename illegal to abuse in Backbone

* add enableShareLinkReportAbuse in templates

* add ReportAbuse

* update ReportAbuse

* update ReportAbuse urls

* update ReportAbuse api-js

* sysadmin_react_app.html

* sysadmin.py

* fix

* fix

* fix

* can not abuse own file

* Contact Information is required.

* fix review

* remove repo icon

--- a/seahub/templates/js/sysadmin-templates.html
+++ b/seahub/templates/js/sysadmin-templates.html
@@ -118,9 +118,16 @@
         </li>
         {% endif %}
 
+
         {% if is_default_admin and enable_work_weixin %}
         <li class="tab">
             <a href="{{ SITE_ROOT }}sys/work-weixin/departments/"><span class="sf3-font-enterprise-wechat sf3-font"></span>企业微信集成</a>
+        </li>
+        {% endif %}
+
+        {% if is_default_admin and enable_share_link_report_abuse %}
+        <li class="tab<% if (cur_tab == 'abuse-reports') { %> tab-cur<% } %>">
+            <a href="{{ SITE_ROOT }}sys/abuse-reports/"><span class="sf2-icon-monitor"></span>{% trans "Abuse Reports" %}</a>
         </li>
         {% endif %}
 
@@ -1023,4 +1030,56 @@
     <% } %>
     </td>
     <td><time title="<%- time %>"><%- time_from_now %></time></td>
+</script>
+
+<script type="text/template" id="abuse-reports-tmpl">
+    <div class="hd ovhd">
+        <h3 class="fleft">{% trans "Abuse Reports" %}</h3>
+    </div>
+    <span class="loading-icon loading-tip"></span>
+    <table>
+        <thead>
+            <tr>
+                <th width="5%"><!--icon--></th>
+                <th width="15%">{% trans "Library" %}</th>
+                <th width="20%">{% trans "File" %}</th>
+                <th width="10%">{% trans "Reporter" %}</th>
+                <th width="15%">{% trans "Abuse Type" %}</th>
+                <th width="15%">{% trans "Description" %}</th>
+                <th width="10%">{% trans "Time" %}</th>
+                <th width="5%">{% trans "Handled" %}</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+    <div class="empty-tips hide">
+        <h2 class="alc">{% trans "No abuse reports" %}</h2>
+    </div>
+    <p class="error error-tip hide"></p>
+</script>
+
+<script type="text/template" id="abuse-report-item-tmpl">
+    <td>
+        <img src="<%= icon_url %>" width="24" />
+    </td>
+    <td><%- repo_name %></td>
+    <td><%- file_path %></td>
+    <td>
+    <% if (reporter) { %>
+        <%- reporter %>
+    <% } else { %>
+        --
+    <% } %>
+    </td>
+    <td><%- abuse_type_output %></td>
+    <td>
+    <% if (description) { %>
+        <%- description %>
+    <% } else { %>
+        --
+    <% } %>
+    </td>
+    <td><time title="<%= time %>"><%= time_from_now %></time></td>
+    <td class='abuse-report-handle cspt' ><%- handled %></td>
 </script>
