[revoke invitation] text fixup

--- a/seahub/invitations/templates/invitations/invitation_revoke_email.html
+++ b/seahub/invitations/templates/invitations/invitation_revoke_email.html
@@ -9,7 +9,7 @@
 <p style="color:#121214;font-size:14px;">{% trans "Hi," %}</p>
 
 <p style="font-size:14px;color:#434144;">
-{% blocktrans %}{{ inviter }} revoke your access to {{ site_name }}.{% endblocktrans %}
+{% blocktrans %}{{ inviter }} revoked your access to {{ site_name }}.{% endblocktrans %}
 </p>
 
 
