--- a/seahub/templates/base.html
+++ b/seahub/templates/base.html
@@ -62,7 +62,7 @@
                                 </div>
                             </div>
                             <span class="loading-icon loading-tip"></span>
-                            <div id="space-traffic" class="hide" data-url="{% url 'space_and_traffic' %}"></div>
+                            <div id="space-traffic" class="hide"></div>
                             <a class="item" href="{{ SITE_ROOT }}profile/">{% trans "Settings" %}</a>
                             {% block admin_link %}
                             {% if request.user.is_staff %}
