--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -91,6 +91,9 @@
             canAddPublicRepo: {% if can_add_public_repo %} true {% else %} false {% endif %},
             canInvitePeople: {% if enable_guest_invitation and user.permissions.can_invite_guest %} true {% else %} false {% endif %},
             customNavItems: {% if custom_nav_items %} JSON.parse('{{ custom_nav_items | escapejs }}') {% else %} {{'[]'}} {% endif %},
+            {% if max_upload_file_size > 0 %}
+            maxUploadFileSize: {{ max_upload_file_size }},
+            {% endif %}
 
             {% if request.user.is_authenticated and request.cur_note %}
             curNoteMsg: '{{ request.cur_note.message|urlize|escapejs }}',
